--- a/ch14/bakery-styles.css
+++ b/ch14/bakery-styles.css
@@ -6,6 +6,7 @@ html {
 * {
   box-sizing: inherit;
 }
+
 body {
   font-family: Georgia, serif;
   font-size: 100%;
@@ -23,6 +24,12 @@ a:focus,
 a:hover,
 a:active {
   color: #F9AB33;
+}
+
+a {
+  text-decoration: none;
+  border-bottom: 1px dotted;
+  padding-bottom: .2em;
 }
 
 
@@ -69,6 +76,8 @@ nav ul li {
 /* main "products" styles */
 
 main {
+  border: double 4px #EADDC4;
+  border-radius: 25px;
   padding: 1em;
   font-family: 'Stint Ultra Expanded', cursive;
   background-color: white;
@@ -77,6 +86,9 @@ main {
 }
 
 h3 {
+  border-top: 1px solid;
+  border-left: 3px solid;
+  padding-left: 1em;
   text-transform: uppercase;
   letter-spacing: .2em;
   color: #7A0002;
@@ -91,6 +103,7 @@ p.more {
 /* aside "hours" styles */
 
 aside {
+  border-top-right-radius: 25px;
   padding: 1em;
   padding-left: 45px;
   background: url(images/scallop.png) repeat-y left top;
