--- a/ch14/bakery-styles.css
+++ b/ch14/bakery-styles.css
@@ -11,6 +11,7 @@ body {
   font-family: Georgia, serif;
   font-size: 100%;
   background-color: white;
+  margin: 0;
 }
 
 /* link styles */
@@ -46,6 +47,11 @@ header {
 header p {
   font-style: italic;
   font-size: 1.2em;
+  margin-top: -12px;
+}
+
+header h1 {
+  margin-top: 1.5em;
 }
 
 /* nav styles */
@@ -73,6 +79,10 @@ nav ul li {
   letter-spacing: .2em;
 }
 
+nav ul {
+  margin: 0;
+}
+
 /* main "products" styles */
 
 main {
@@ -83,6 +93,7 @@ main {
   background-color: white;
   line-height: 1.8em;
   color: #555;
+  margin: 2.5%;
 }
 
 h3 {
@@ -92,12 +103,31 @@ h3 {
   text-transform: uppercase;
   letter-spacing: .2em;
   color: #7A0002;
+  margin-top: 2.5em;
 }
 
 p.more {
   font-family: verdana, sans-serif;
   text-transform: uppercase;
   font-size: .8em;
+  clear: left;
+}
+
+main img {
+  float: left;
+  margin: 0 1em 1em 0;
+}
+
+img[src*="muffin"] {
+  margin-left: 50px;
+  -webkit-shape-outside: circle(110px);
+  -shape-outside: circle(110px);
+  -shape-outside: polygon(0px 0px, 197px 0px, 241px 31px, 241px 68px, 226px 82px, 219px 131px, 250px 142px, 250px 158px, 0px 158px);
+}
+
+img[src*="bread"] {
+  -webkit-shape-outside: ellipse(130px 95px at 50% 50%);
+  -shape-outside: ellipse(130px 95px at 50% 50%);
 }
 
 /* aside "hours" styles */
@@ -117,6 +147,7 @@ footer {
   color: #EADDC4;
   text-align: center;
   font-size: .8em;
+  <div id="award"><img src="images/award.png" alt="Farmers' Market Award"></div>
 }
 
 h2 {
@@ -128,4 +159,10 @@ h2 {
   font-family: verdana, sans-serif;
   font-size: .8em;
   text-transform: uppercase;
+}
+
+#award {
+  top: 30px;
+  left: 50px;
+  position: fixed;
 }
