--- a/projects/simones.css
+++ b/projects/simones.css
@@ -13,6 +13,7 @@ h2,
 h3,
 p {
     margin: 0;
+    font-family: 'Arbutus Slab';
 }
 
 h1 {
@@ -20,7 +21,7 @@ h1 {
 }
 
 .mainNav ul {
-    font-family: 'Roboto';
+    font-family: 'Arbutus Slab';
     padding: 0;
     margin: 1.5rem 12rem;
     list-style-type: none;
@@ -65,6 +66,65 @@ h1 {
     margin: auto auto;
 }
 
+#bowlSizesHeading {
+    display: grid;
+    grid-template-rows: 5rem;
+    grid-template-columns: 30% 40% 15% 15%;
+    margin: 0 10rem 0 10rem;
+    text-align: center;
+}
+
+#lilBowl {
+    grid-area: 1/3/2/4;
+    padding-top: 1rem;
+}
+
+#bigBowl {
+    grid-area: 1/4/2/5;
+    padding-top: 1rem;
+}
+
+.sigBowlItem {
+    display: grid;
+    grid-template-rows: 3rem 8rem;
+    grid-template-columns: 25% 45% 15% 15%;
+    margin: 0 10rem 0 10rem;
+    text-align: center;
+    color: #00604c;
+}
+
+.sigBowlImg {
+    grid-area: 1/1/3/2;
+    border-right: #a29160 solid .2rem;
+}
+
+.sigBowlImg img {
+    height: 90%;
+}
+
+.sigBowlTitle {
+    grid-area: 1/2/2/3;
+}
+
+.sigBowlDesc {
+    grid-area: 2/2/3/3;
+    color: #605e5e;
+    padding: 0 .5rem 0 .5rem;
+}
+
+.sigBowlLilPrice {
+    grid-area: 1/3/2/4;
+}
+
+.sigBowlBigPrice {
+    grid-area: 1/4/2/5;
+}
+
+#wrapOption {
+    display: block;
+    margin: 2rem auto;
+}
+
 .sectionHeadingGrid {
     width: 100vw;
     display: grid;
@@ -87,4 +147,130 @@ h1 {
     grid-area: 3/1/4/2;
     border-top: solid .12em rgb(162, 145, 96);
     border-bottom: solid .15em rgb(162, 145, 96);
+}
+
+#sidesContainer {
+    background-color: rgba(83, 153, 130, 0.77);
+    color: #ffffff;
+    text-align: center;
+    padding: 0 14rem;
+}
+
+.sidesTitleGrid {
+    display: grid;
+    grid-template-rows: 5rem;
+    grid-template-columns: 25% 25% 50%;
+    text-align: center;
+}
+
+.salads {
+    grid-area: 1/1/2/2;
+    padding: 1rem;
+}
+
+.pitzaPies {
+    grid-area: 1/2/2/3;
+    padding: 1rem;
+}
+
+.sides {
+    grid-area: 1/3/2/5;
+    padding: 1rem;
+}
+
+.sidesGrid {
+    display: grid;
+    grid-template-rows: 3.2rem 6em;
+    grid-template-columns: 25% 25% 25% 25%;
+}
+
+.sideGrid,
+p {
+    color: black;
+}
+
+.saladsTitle {
+    grid-area: 1/1/2/2;
+    border-left: .2rem white solid;
+    padding: .5rem 1rem .5rem 1rem;
+}
+
+.saladsDescription {
+    grid-area: 2/1/3/2;
+    border-left: .2rem white solid;
+    padding: .5rem 1rem .5rem 1rem;
+}
+
+.pitzaPiesTitle {
+    grid-area: 1/2/2/3;
+    border-left: .2rem white solid;
+    padding: .5rem 1rem .5rem 1rem;
+}
+
+.pitzaPiesDescription {
+    grid-area: 2/2/3/3;
+    border-left: .2rem white solid;
+    padding: .5rem 1rem .5rem 1rem;
+}
+
+.sidesLeftTitle {
+    grid-area: 1/3/2/4;
+    border-left: .2rem white solid;
+    padding: .5rem 1rem .5rem 1rem;
+}
+
+.sidesLeftDescription {
+    grid-area: 2/3/3/4;
+    border-left: .2rem white solid;
+    padding: .5rem 1rem .5rem 1rem;
+}
+
+.sidesRightTitle {
+    grid-area: 1/4/2/5;
+    border-right: .2rem white solid;
+    padding: .5rem 1rem .5rem 1rem;
+}
+
+.sidesRightDescription {
+    border-right: .2rem white solid;
+    grid-area: 2/4/3/5;
+    padding: .5rem 1rem .5rem 1rem;
+}
+
+#beveragesHeadingGrid {
+    display: grid;
+    grid-templae-rows: 5rem;
+    grid-template-columns: 40% 45% 15%;
+    margin: 0 13rem 0 13rem;
+}
+
+#beveragesHeading {
+    grid-area: 1/2/2/3;
+}
+
+#beveragesPriceHeading {
+    grid-area: 1/3/2/4;
+}
+
+.beveragesItemGrid {
+    display: grid;
+    grid-template-rows: 6rem;
+    grid-template-columns: 40% 45% 15%;
+    margin: 0 13rem 0 13rem;
+}
+
+.beveragesImage img {
+    display: block;
+    margin: 0 10rem 0 auto;
+    width: 100px;
+}
+
+.beveragesTitle {
+    padding-top: 1rem;
+    color: #00604c;
+}
+
+.beveragesPrice {
+    padding-top: 1rem;
+    color: #00604c;
 }
